--- a/SSA/AndroidManifest.xml
+++ b/SSA/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ssa.bas"
+    package="com.sds.ssa"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -15,7 +15,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="com.ssa.bas.activity.BasActivity"
+            android:name="com.sds.ssa.activity.BasActivity"
             android:label="@string/title_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.sds.bas.fragment.app.DetailActivity"
+            android:name="com.sds.ssa.fragment.app.DetailActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
