--- a/SSA/AndroidManifest.xml
+++ b/SSA/AndroidManifest.xml
@@ -12,11 +12,12 @@
     <uses-permission android:name="android.permission.INTERNET" />
     
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/title_icon"
         android:label="@string/app_name" >
         <activity
             android:name="com.sds.ssa.activity.BasActivity"
-            android:label="@string/title_main" >
+            android:label="@string/title_main"
+            android:theme="@style/AppBaseTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
