--- a/SSA/AndroidManifest.xml
+++ b/SSA/AndroidManifest.xml
@@ -16,6 +16,8 @@
         android:label="@string/app_name" >
         <activity
             android:name="com.sds.ssa.activity.BasActivity"
+            android:configChanges="orientation"
+    		android:screenOrientation="portrait"
             android:label="@string/title_main"
             android:theme="@style/AppBaseTheme" >
             <intent-filter>
