--- a/SSA/AndroidManifest.xml
+++ b/SSA/AndroidManifest.xml
@@ -8,10 +8,18 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
 
+    <permission 
+        android:label="Test Permission" 
+        android:name="sdsssa.permission.TEST" 
+        android:description="@string/title_main" 
+        android:protectionLevel="normal">
+    </permission>
+
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    
+
     <application
+        android:allowBackup="true"
         android:icon="@drawable/title_icon"
         android:label="@string/app_name" >
         <activity
@@ -19,7 +27,8 @@
             android:configChanges="orientation"
     		android:screenOrientation="portrait"
             android:label="@string/title_main"
-            android:theme="@style/AppBaseTheme" >
+            android:theme="@style/AppBaseTheme"
+			android:permission="sdsssa.permission.TEST" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
