--- a/SSA/bin/AndroidManifest.xml
+++ b/SSA/bin/AndroidManifest.xml
@@ -17,11 +17,12 @@
 
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/title_icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:name="com.sds.ssa.vo.UserInfo" >
         <activity
             android:name="com.sds.ssa.activity.BasActivity"
             android:configChanges="orientation"
@@ -31,7 +32,7 @@
 			android:permission="sdsssa.permission.TEST" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-             
+<!--                 <category android:name="android.intent.category.LAUNCHER" /> -->
             </intent-filter>
         </activity>
         <activity
