debug, test another screenshot adapter

--- a/SSA/.settings/org.eclipse.core.resources.prefs
+++ b/SSA/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/com/sds/ssa/activity/BasActivity.java=UTF-8
 encoding//src/com/sds/ssa/fragment/app/DetailActivity.java=UTF-8
 encoding//src/com/sds/ssa/util/CustomDialog.java=UTF-8
