--- a/SSA/AndroidManifest.xml
+++ b/SSA/AndroidManifest.xml
@@ -45,6 +45,11 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name="com.sds.ssa.fragment.app.ScreenshotActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
