--- a/SSA/AndroidManifest.xml
+++ b/SSA/AndroidManifest.xml
@@ -38,17 +38,20 @@
         <activity
             android:name="com.sds.ssa.fragment.app.DetailActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@style/AppBaseTheme" >
         </activity>
         <activity
             android:name="com.sds.ssa.fragment.update.UpdateDetailActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@style/AppBaseTheme" >
         </activity>
         <activity
             android:name="com.sds.ssa.fragment.app.ScreenshotActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@style/AppBaseTheme" >
         </activity>
     </application>
 
