--- a/SSA/AndroidManifest.xml
+++ b/SSA/AndroidManifest.xml
@@ -53,6 +53,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppBaseTheme" >
         </activity>
+        <activity
+            android:name="com.sds.ssa.search.SearchActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppBaseTheme" >
+        </activity>
     </application>
 
 </manifest>
