--- a/SSA/.settings/org.eclipse.core.resources.prefs
+++ b/SSA/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/com/sds/ssa/activity/BasActivity.java=UTF-8
 encoding//src/com/sds/ssa/fragment/app/DetailActivity.java=UTF-8
+encoding//src/com/sds/ssa/phone/PhoneActivity.java=UTF-8
 encoding//src/com/sds/ssa/util/ReviewDialog.java=UTF-8
