--- a/SSA/bin/AndroidManifest.xml
+++ b/SSA/bin/AndroidManifest.xml
@@ -36,6 +36,12 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.sds.ssa.phone.PhoneActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppBaseTheme" >
+        </activity>
+        <activity
             android:name="com.sds.ssa.fragment.app.DetailActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
@@ -58,6 +64,21 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppBaseTheme" >
+        </activity>
+        
+        <activity
+            android:name="com.sds.ssa.tablet.ItemListActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppBaseTheme" >
+        </activity>
+        <activity
+            android:name="com.sds.ssa.tablet.ItemDetailActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppBaseTheme"
+            android:parentActivityName="com.sds.ssa.tablet.ItemListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sds.ssa.tablet.ItemListActivity" />
         </activity>
     </application>
 
