--- a/SSA/AndroidManifest.xml
+++ b/SSA/AndroidManifest.xml
@@ -5,13 +5,13 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="15"
+        android:minSdkVersion="9"
         android:targetSdkVersion="19" />
 
     <permission 
         android:label="Test Permission" 
         android:name="sdsssa.permission.TEST" 
-        android:description="@string/title_main" 
+        android:description="@string/app_name" 
         android:protectionLevel="normal">
     </permission>
 
@@ -22,13 +22,13 @@
         android:allowBackup="true"
         android:icon="@drawable/title_icon"
         android:label="@string/app_name"
-        android:name="com.sds.ssa.vo.UserInfo" >
+        android:name="com.sds.ssa.vo.UserInfo"
+        android:theme="@style/ActionBarTheme" >
         <activity
             android:name="com.sds.ssa.activity.BasActivity"
             android:configChanges="orientation"
     		android:screenOrientation="portrait"
-            android:label="@string/title_main"
-            android:theme="@style/AppBaseTheme"
+            android:label="@string/app_name"
 			android:permission="sdsssa.permission.TEST" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,43 +38,37 @@
         <activity
             android:name="com.sds.ssa.phone.PhoneActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppBaseTheme" >
+            android:theme="@style/ActionBarTheme"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.sds.ssa.fragment.app.DetailActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppBaseTheme" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.sds.ssa.fragment.update.UpdateDetailActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppBaseTheme" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.sds.ssa.fragment.app.ScreenshotActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppBaseTheme" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.sds.ssa.search.SearchActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppBaseTheme" >
+            android:screenOrientation="portrait" >
         </activity>
         
         <activity
             android:name="com.sds.ssa.tablet.ItemListActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppBaseTheme" >
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.sds.ssa.tablet.ItemDetailActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppBaseTheme"
             android:parentActivityName="com.sds.ssa.tablet.ItemListActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
