--- a/SSA/project.properties
+++ b/SSA/project.properties
@@ -12,3 +12,4 @@
 
 # Project target.
 target=android-19
+android.library.reference.1=../../Desktop/jin/공부/개발/Navigation-Drawer-ViewPager-ActionBarCompat-master/Navigation-Drawer-ViewPager-ActionBarCompat-master/ActionBarCompat
