--- a/SSA/AndroidManifest.xml
+++ b/SSA/AndroidManifest.xml
@@ -63,16 +63,16 @@
         </activity>
         
         <activity
-            android:name="com.sds.ssa.tablet.ItemListActivity"
+            android:name="com.sds.ssa.tablet.TabletItemListActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.sds.ssa.tablet.ItemDetailActivity"
+            android:name="com.sds.ssa.tablet.TabletItemDetailActivity"
             android:label="@string/app_name"
-            android:parentActivityName="com.sds.ssa.tablet.ItemListActivity" >
+            android:parentActivityName="com.sds.ssa.tablet.TabletItemListActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.sds.ssa.tablet.ItemListActivity" />
+                android:value="com.sds.ssa.tablet.TabletItemListActivity" />
         </activity>
     </application>
 
