--- a/SSA/bin/AndroidManifest.xml
+++ b/SSA/bin/AndroidManifest.xml
@@ -88,6 +88,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sds.ssa.tablet.sub.AppListActivity" />
         </activity>
+        <activity
+            android:name="com.sds.ssa.tablet.sub.AppUpdateListActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
