--- a/SSA/bin/AndroidManifest.xml
+++ b/SSA/bin/AndroidManifest.xml
@@ -27,7 +27,6 @@
         <activity
             android:name="com.sds.ssa.activity.BasActivity"
             android:configChanges="orientation"
-    		android:screenOrientation="portrait"
             android:label="@string/app_name"
 			android:permission="sdsssa.permission.TEST" >
             <intent-filter>
@@ -64,11 +63,13 @@
         
         <activity
             android:name="com.sds.ssa.tablet.ItemListActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:theme="@style/ActionBarTheme" >
         </activity>
         <activity
             android:name="com.sds.ssa.tablet.ItemDetailActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:parentActivityName="com.sds.ssa.tablet.ItemListActivity" >
             <meta-data
@@ -78,19 +79,18 @@
         
         <activity
             android:name="com.sds.ssa.tablet.sub.AppListActivity"
-            android:label="@string/app_name" >
+            android:configChanges="orientation|screenSize"
+            android:label="@string/app_name"
+            android:theme="@style/ActionBarTheme" >
         </activity>
         <activity
             android:name="com.sds.ssa.tablet.sub.AppDetailActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:parentActivityName="com.sds.ssa.tablet.sub.AppListActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sds.ssa.tablet.sub.AppListActivity" />
-        </activity>
-        <activity
-            android:name="com.sds.ssa.tablet.sub.AppUpdateListActivity"
-            android:label="@string/app_name" >
         </activity>
     </application>
 
