--- a/SSA/bin/AndroidManifest.xml
+++ b/SSA/bin/AndroidManifest.xml
@@ -41,17 +41,17 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="com.sds.bas.phone.home.app.DetailActivity"
+            android:name="com.sds.bas.phone.detail.DetailActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="com.sds.bas.phone.home.update.UpdateDetailActivity"
+            android:name="com.sds.bas.phone.detail.UpdateDetailActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="com.sds.bas.phone.home.app.ScreenshotActivity"
+            android:name="com.sds.bas.phone.detail.ScreenshotActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
